Migrate tests to Junit5